Attempt to fix oversized text on mobile - rip off jquery styles - I think the font-size: 100% in ui-helper-reset is best to avoid

--- a/src/css/chat.css
+++ b/src/css/chat.css
@@ -9,6 +9,12 @@ a {
     color: #fff;
 }
 
+ul {
+    padding-inline-start: 0px;
+    margin-block-start: 0px;
+    margin-block-end: 0px;
+}
+
 textarea {
     border-radius: 2px;
     font-family: 'Open Sans', 'Helvetica Neue', Arial, Gulim;
